# pyatom_finance

./: .gitignore  .travis.yml  Dockerfile  README.md  pyproject.toml  tasks.py
docs/example_outputs/: __collect_examples.py  get_better_consensuses.json  get_brokerage_actions.json  get_chart_interday.json  get_chart_intraday.json  get_financial_data.json  get_future_events.json  get_many_events.json  get_market_cap.json  get_near_events.json  get_news_feed.json  get_overview_data.json  get_past_events.json  get_period_guidance.json  get_relative_consensuses.json  get_symbol.json
pyatom_finance/: __init__.py  collector.py  config.py  exceptions.py  requester.py
tests/: test_collector.py  test_requester.py
