[tool.poetry]
name = "pyatom_finance"
version = "0.1.0"
description = "Module to collect data from Atom IO"
authors = ["carbonarok <carbonarok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
pydantic = "^1.8.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.7.2"
pydocstyle = "^5.1.1"
invoke = "^1.5.0"
flake8 = "^3.8.4"
bandit = "^1.7.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
